@@ -19,3 +19,4 @@ R. P. C. Rodgers (man page)
 Allen Barnett (improved emf export)
 Andrew Elia (dr2d export filter)
 Ralf Stubner (bugfixes about pstoedit usage)
+Dag Wieers (rpm-spec file)
