@@ -16,7 +16,8 @@ AUTOTRACE_VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${MICRO_VERSION}
 AM_INIT_AUTOMAKE($PACKAGE, $AUTOTRACE_VERSION, no-define)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE", [Package name])
 AC_SUBST(PACKAGE)
-AC_DEFINE_UNQUOTED(AUTOTRACE_VERSION,"$VERSION", [Package version])
+AC_DEFINE_UNQUOTED(AUTOTRACE_VERSION,"$AUTOTRACE_VERSION", [Package version])
+AC_SUBST(AUTOTRACE_VERSION)
 
 #
 # version setting up for libtool
